Fix table alignment

--- a/src/components/screens/monitor/delegates/delegates.css
+++ b/src/components/screens/monitor/delegates/delegates.css
@@ -106,8 +106,6 @@
     text-overflow: ellipsis;
     overflow: inherit;
     display: block;
-    padding-right: 8px;
-    padding-left: 8px;
 
     & > .delegateColumn {
       display: flex;
